<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Send SMS</string>
    <string name="txt_edit_hint">Write SMS</string>
    <string name="txt_btn_send">Send</string>
    <string name="txt_pick_time">Schedule Time</string>
    <string name="txt_pick_date">Schedule Date</string>
    <string name="txt_schedule_sms">Done</string>
    <string name="txt_phone_num_hint">Enter phone number</string>
    <string name="txt_btn_pickcontact">Pick Contact</string>

</resources>
